# bbo-labelgui

./: environment.yml  labelgui.py  pyproject.toml  setup.py
labelgui/: __main__.py  config.py  label_data.py  labeling_gui.py
